# cooperative_nav_comms_policy

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
src/: main.py
src/policy/: __init__.py  actions.py  actor.py  critic.py  function_provider.py  polynomial_function_provider.py  state_encoding.py
src/simulation/: __init__.py  base.py  data_structures.py  results.py  rewards.py  sim_main.py  state_encoding.py
src/simulation/line_sim/: __init__.py  encoding.py  fg.py  plotter.py  sim.py
src/simulation/plane_sim/: __init__.py  fg.py  plotter.py  sim.py
src/training/: __init__.py  replay.py  trainer.py
tests/: conftest.py  fakes.py  test_actions.py  test_actor.py  test_critic.py  test_data_structures.py  test_function_provider.py  test_line_encoding.py  test_line_fg.py  test_line_plotter.py  test_line_sim.py  test_main.py  test_plane_fg.py  test_plane_plotter.py  test_plane_sim.py  test_replay.py  test_results.py  test_sim_main.py  test_state_encoding.py  test_trainer.py
