[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cooperative-nav-comms-policy"
version = "0.1.0"
description = "Cooperative navigation simulation with actor-critic method of learning communication behavior."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
cooperative-nav-comms-policy = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
